# mynanobot

./: .gitignore  TICKETS.md  pyproject.toml
nanobot/: __init__.py  __main__.py
nanobot/bus/: __init__.py  events.py  queue.py
nanobot/cli/: commands.py
nanobot/config/: __init__.py  loader.py  paths.py  schema.py
nanobot/providers/: __init__.py  base.py  ollama.py  registry.py
nanobot/utils/: __init__.py  helpers.py
tests/: test_config.py  test_nanobot.py
