[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanobot"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "litellm>=1.40.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "ddgs>=0.8.0",
    "loguru>=0.7.0",
    "croniter>=2.0.0",
    "mcp>=1.0.0",
    "json-repair>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "python-telegram-bot>=20.0",
    "slack-sdk>=3.27.0",
]

[project.scripts]
nanobot = "nanobot.cli.commands:app"

[tool.hatch.version]
path = "nanobot/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
